@@ -1,3 +1,8 @@
+caputils-0.7.10
+---------------
+
+	* fix: stream_read timeout works again.
+
 caputils-0.7.9
 --------------
 
